# MCP

./: README.md
Mcp_2/: app.py  main.py  pyproject.toml
Mcp_2/mcpserver/: Dockerfile  client-sse.py  requirements.txt
Mcp_2/server/: client.py  weather.json  weather.py
mcp/: app.py  browser_mcp.json  pyproject.toml  requirements.txt
mcp_langchain/: client.py  mathserver.py  pyproject.toml  requirements.txt  weather.py
