[project]
name = "mcp-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-groq>=1.1.2",
    "mcp-use>=1.7.0",
    "mcp[cli]>=1.27.0",
    "nest-asyncio>=1.6.0",
    "streamlit>=1.44.0",
]
